--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="flexible">
+    <section class=" none flexible">
         <div class="text-container">
             <h1>
                 <span>Skip The Diet,</span> 
@@ -24,9 +24,31 @@
             <a class="anchor-button" target="_blank" href="">Order Food</a>
         </div>
         <div class="text-container">
-            <img src="images/female/Group 8425.png" alt="">
+            <img class="image-container1"  src="images/female/Group 8425.png" alt="">
+        </div>
+
+    </section>
+    <section class="about-container flexible">
+        <div class="text-container">
+            <img class="image-container2" src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="text-container">
+            <h1>About Me</h1>
+            <p>
+                Hi,I am Linda.I love to cook, but I haven’t always. In fact, for most of my early adult life, cooking dinner usually meant microwaving a frozen dinner or adding boiling water to something that came from a box. It wasn’t until I got married that I started eating real food because I married a guy who cooks. I started joining him in the kitchen and realized that cooking could be fun. Eating real food was really fun. And gaining confidence as a home chef? That was life changing!
+            </p>
+            <a class="anchor-button" target="_blank" href="">Contact Me</a>
         </div>
         
+    </section>
+    <section>
+       <div class="recipes-text">
+            <h1 >My Recipes</h1>
+            <p>It’s a food blog, so naturally you’re going to find recipes here. But I only share the recipes I really, truly love. You won’t find anything here that I’ve never made before or would never make again. Every recipe I post has my stamp of approval—if I wouldn’t eat it or serve it, you won’t find it here.</p>
+        <section>
+       </div>
+
+        </section>
     </section>
 </body>
 </html>
