--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class=" none flexible">
         <div class="text-container">
-            <h1>
+            <h1 class="title-h1">
                 <span>Skip The Diet,</span> 
                 Just Eat Healthy 
                  With Food Network 
@@ -74,15 +74,19 @@
        <section class=" channel flexible">
            <div class="text-container">
                <h1>700K</h1>
+               <a href="#"><img class="footer-img" src="images/food/you.png" alt=""></a>
                <p>Youtube Subscribers</p>
            </div>
            <div class="text-container">
                 <h1>2.4m</h1>
+                <a href="#"><img class="footer-img" src="images/food/instrogram.png" alt=""></a>
                 <p>Instagram Followers</p>
             </div>
             <div class="text-container">
                 <h1>100K</h1>
-                <p>Dribbble Shot Likes</p>
+                <a href="#"><img class="footer-img" src="images/food/facebook.png" alt=""></a>
+                <p>Facebook Likes</p>
+                
             </div>
        </section>
        <footer>
